# BigBrother

./: .gitignore  CLAUDE.md  DEPLOY-REQUEST.md  DEPLOY.md  DEPLOY_TOPOLOGY.md  OWNERS.md  README.md  ROADMAP.md  SLAI_SECRETS_INBOX.md  STATUS.md  TECH_DEBT.md  TECH_DEBT_ARCHIVE.md  docker-compose.doc-platform.yml  docker-compose.gpu.yml  docker-compose.local-models.yml  docker-compose.monitoring.yml
doc-service/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  (+5 more)
inference-service/: .dockerignore  .env.example  .gitignore  Dockerfile  MODELS.md  README.md  docker-compose.yml  pyproject.toml  requirements-claude.txt  requirements-qwen.txt  requirements.txt
inference-service/src/inference_service/: __init__.py  admission.py  asr.py  auth.py  config.py  deps.py  main.py  metrics.py  schemas.py
inference-service/src/inference_service/backends/: base.py  claude.py  openai_compatible.py  qwen_vl.py  stub.py
inference-service/src/inference_service/prompts/: classify.py  extract.py  response.py  verify.py
inference-service/src/inference_service/routes/: _payload.py  classify.py  extract.py  metrics.py  providers.py  transcribe.py  verify.py  vision.py
inference-service/tests/: conftest.py  test_auth.py  test_claude_backend.py  test_concurrency.py  test_context_overflow.py  test_openai_compat_backend.py  test_probe.py  test_prompt_override.py  test_providers_status.py  test_resolve_backend.py  test_response_normalize.py  test_routes.py  test_stub_backend.py  test_transcribe.py  test_vision_downscale.py
(+631 files in other folders)
